name:                nix-shell-bit
version:             0.1.0.0
cabal-version:       >=1.10
author:              ivanbrennan
maintainer:          ivan.brennan@gmail.com
copyright:           Copyright (c) 2019 Ivan Brennan
license:             BSD3
license-file:        LICENSE
category:            Development
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:
      NixShellBit.Main
  other-modules:
      NixShellBit.Git
      NixShellBit.Options
      NixShellBit.PPrint
      Paths_nix_shell_bit
  build-depends:
      ansi-wl-pprint >= 0.6 && < 0.7
    , base >= 4.12 && < 5
    , directory >= 1.3 && < 1.4
    , filepath >= 1.4 && < 1.5
    , hlibgit2 >= 0.18 && < 0.19
    , optparse-applicative >= 0.14 && < 0.15
    , safe >= 0.3 && < 0.4
    , transformers >= 0.5 && < 0.6
  hs-source-dirs:
      src
  ghc-options: -Wall -O2
  default-language: Haskell2010

executable nix-shell-bit
  main-is: nix-shell-bit.hs
  build-depends:
      base
    , nix-shell-bit
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

test-suite nix-shell-bit-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hspec
    , nix-shell-bit
  default-language: Haskell2010
