name:                nix-shell-bit
version:             0.1.0.0
cabal-version:       >=1.10
author:              ivanbrennan
maintainer:          ivan.brennan@gmail.com
copyright:           Copyright (c) 2019 Ivan Brennan
license:             BSD3
license-file:        LICENSE
category:            Development
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:
      NixShellBit.Config
      NixShellBit.Git
      NixShellBit.Main
      NixShellBit.Nix
      NixShellBit.Operation
      NixShellBit.Options
      NixShellBit.PPrint
      NixShellBit.Project
      NixShellBit.Version
  other-modules:
      NixShellBit.Line
      Paths_nix_shell_bit
  build-depends:
      aeson                >= 1.4  && < 1.5
    , ansi-wl-pprint       >= 0.6  && < 0.7
    , attoparsec           >= 0.13 && < 0.14
    , base                 >= 4.12 && < 5
    , bytestring           >= 0.10 && < 0.11
    , Cabal                >= 2.4  && < 2.5
    , dhall                >= 1.19 && < 1.20
    , directory            >= 1.3  && < 1.4
    , filemanip            >= 0.3  && < 0.4
    , filepath             >= 1.4  && < 1.5
    , haskeline            >= 0.7  && < 0.8
    , hlibgit2             >= 0.18 && < 0.19
    , optparse-applicative >= 0.14 && < 0.15
    , prettyprinter        >= 1.2  && < 1.3
    , safe                 >= 0.3  && < 0.4
    , temporary            >= 1.3  && < 1.4
    , text                 >= 1.2  && < 1.3
    , transformers         >= 0.5  && < 0.6
    , typed-process        >= 0.2  && < 0.3
    , unix                 >= 2.7  && < 2.8
    , unliftio             >= 0.2  && < 0.3
  hs-source-dirs:
      src
  ghc-options: -Wall -O2
  default-language: Haskell2010

executable nix-shell-bit
  main-is: nix-shell-bit.hs
  build-depends:
      base
    , nix-shell-bit
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

test-suite nix-shell-bit-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      NixShellBit.ConfigSpec
      NixShellBit.GitSpec
      NixShellBit.MainSpec
      NixShellBit.NixSpec
      NixShellBit.OperationSpec
      NixShellBit.OptionsSpec
      NixShellBit.PPrintSpec
      NixShellBit.ProjectSpec
      NixShellBit.Sbox
      NixShellBit.VersionSpec
      Test.Sandbox
      Test.Utils
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , bytestring
    , Cabal
    , directory
    , filemanip
    , filepath
    , hspec
    , main-tester
    , nix-shell-bit
    , optparse-applicative
    , regex-tdfa
    , temporary
    , text
    , typed-process
    , unliftio
  default-language: Haskell2010
