name:                shellbit
version:             0.1.0.0
cabal-version:       >=1.10
author:              ivanbrennan
maintainer:          ivan.brennan@gmail.com
copyright:           Copyright (c) 2019 Ivan Brennan
license:             BSD3
license-file:        LICENSE
category:            Development
build-type:          Simple
extra-source-files:
      README.md
      test/fixtures/package.json
      test/fixtures/pkgs.nix
      test/fixtures/PROJECT.cabal

library
  exposed-modules:
      Shellbit.Config
      Shellbit.Git
      Shellbit.Main
      Shellbit.Nix
      Shellbit.Operation
      Shellbit.Options
      Shellbit.PPrint
      Shellbit.Project
      Shellbit.Version
      Shellbit.Column
  other-modules:
      Paths_shellbit
      Shellbit.Line
  build-depends:
      aeson                >= 1.4      && < 1.5
    , ansi-wl-pprint       >= 0.6      && < 0.7
    , attoparsec           >= 0.13     && < 0.14
    , base                 >= 4.12     && < 5
    , bytestring           >= 0.10     && < 0.11
    , Cabal                >= 2.4      && < 2.5
    , containers           >= 0.6.0.1  && < 0.7
    , dhall                >= 1.19     && < 1.20
    , directory            >= 1.3      && < 1.4
    , filemanip            >= 0.3      && < 0.4
    , filepath             >= 1.4      && < 1.5
    , haskeline            >= 0.7      && < 0.8
    , hlibgit2             >= 0.18     && < 0.19
    , optparse-applicative >= 0.14     && < 0.15
    , prettyprinter        >= 1.2      && < 1.3
    , safe                 >= 0.3      && < 0.4
    , temporary            >= 1.3      && < 1.4
    , terminal-size        >= 0.3.2.1  && < 0.4
    , text                 >= 1.2      && < 1.3
    , transformers         >= 0.5      && < 0.6
    , typed-process        >= 0.2      && < 0.3
    , unix                 >= 2.7      && < 2.8
    , unliftio             >= 0.2      && < 0.3
  hs-source-dirs:
      src
  ghc-options: -Wall -O2
  default-language: Haskell2010

executable shellbit
  main-is: shellbit.hs
  build-depends:
      base
    , shellbit
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

test-suite shellbit-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Shellbit.ColumnSpec
      Shellbit.ConfigSpec
      Shellbit.GitSpec
      Shellbit.MainSpec
      Shellbit.NixSpec
      Shellbit.OperationSpec
      Shellbit.OptionsSpec
      Shellbit.PPrintSpec
      Shellbit.ProjectSpec
      Shellbit.Sbox
      Shellbit.VersionSpec
      Test.Sandbox
      Test.Utils
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , bytestring
    , Cabal
    , directory
    , filemanip
    , filepath
    , hspec
    , main-tester
    , optparse-applicative
    , regex-tdfa
    , shellbit
    , temporary
    , text
    , typed-process
    , unliftio
  default-language: Haskell2010
